--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p>Suivez Kamet0 en direct sur Twitch</p>
             </a>
 
-            <a href="C:\Users\jgrog\OneDrive\Documents\Mon-site\index_2.html" class="liens">
+            <a href="index_2.html" class="liens">
                 <h2>Collection de cartes</h2>
                 <p>Collectionnez nos joueurs</p>
             </a>
