--- a/index_2.html
+++ b/index_2.html
@@ -10,7 +10,7 @@
     <header class="roboto-regular">
         <h1>Roster a collectionner</h1>
         <nav>
-            <a href="C:\Users\jgrog\OneDrive\Documents\Mon-site\index.html" class="roboto-regular">-Site principal-</a>
+            <a href="index.html" class="roboto-regular">-Site principal-</a>
         </nav>
     </header>
 
